--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -30,7 +30,7 @@ p,li,label,td,th{
 /* header section 1 */
 
 .nav{
-  border: 4px solid red;
+  /* border: 4px solid red; */
   width: 85%;
   margin: 1em auto;
   overflow: auto;
@@ -62,7 +62,7 @@ p,li,label,td,th{
 }
 /* banner section 2 */
 .banner{
-  border: 4px solid red;
+  /* border: 4px solid red; */
   height: 670px;
   background-image: url(../images/banner-bg.jpg);
   background-repeat: no-repeat;
@@ -103,7 +103,7 @@ p,li,label,td,th{
 
 /* ads-a section 3 */
 .ads{
-  border: 4px solid red;
+  /* border: 4px solid red; */
   width: 85%;
   margin: 4em auto;
   overflow: auto;
@@ -156,12 +156,12 @@ p,li,label,td,th{
 }
 /* merchandise section 4 */
 .merch{
-  border: 4px solid red;
+  /* border: 4px solid red; */
   width: 85%;
   margin:4em auto;
 }
 .section-header{
-  border: 2px dashed yellow;
+  /* border: 2px dashed yellow; */
   text-align: center;
 }
 .section-header span{
@@ -181,12 +181,12 @@ p,li,label,td,th{
   margin: auto;
 }
 .merch-gallery{
-  border: 2px dashed green;
+  /* border: 2px dashed green; */
   overflow: auto;
   margin-top: 2em;
 }
 .merch-items{
-  border: 2px dashed black;
+  /* border: 2px dashed black; */
   width: 24.25%;
   float: left;
   margin-right: 1%;
@@ -208,7 +208,7 @@ p,li,label,td,th{
 
 /* discount section 5 */
 .discount{
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 85%;
   margin: 4em auto;
   position: relative;
@@ -219,7 +219,7 @@ p,li,label,td,th{
   background-position: center center;
 }
 .discount-text{
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   position: absolute;
   left: 50%;
   top: 50%;
