--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -280,3 +280,62 @@ p,li,label,td,th{
   background-position: center center;
   margin-top: 2%;
 }
+
+/* reservation section 8 */
+
+.reservation{
+  border: 4px solid red;
+  width: 85%;
+  margin-top: 4em auto;
+}
+
+.form{
+  border: 2px solid yellow;
+  overflow: auto;
+  margin-top: 2em;
+  background: #f2f2f2;
+}
+.form-group{
+  width: 49%;
+  float: left;
+  border: 2px dashed blue;
+  padding: 1em;
+}
+.form-gropup:nth-child(1){
+  margin-right: 2%;
+}
+form label{
+  font-weight: 700;
+  text-transform: capitalize;
+}
+form input,form select, form textarea{
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+.res-time{
+  text-align: center;
+}
+.res-time input, .agree input{
+  width: auto;
+}
+p{
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 1em;
+}
+form h3{
+  text-align: center;
+}
+
+form h3::after{
+  content: "";
+  display: block;
+  background-image: url(../images/reservation-cards.png);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 150px;
+  margin: auto;
+}
